--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.73.4",
+    "react-native-calendars": "^1.1312.1",
     "react-native-circular-progress": "^1.4.0",
     "react-native-date-picker": "4.2.1",
     "react-native-gesture-handler": "~2.14.0",
