--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
     "react-native-web": "~0.19.6",
+    "react-native-weekly-calendar": "^0.2.0",
     "reanimated-color-picker": "^3.0.3",
     "rn-emoji-keyboard": "^1.6.1"
   },
